# mini-url

./: .env  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py  utils.py
backend/app/api/: dependencies.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: root.py  shortener.py
backend/app/core/: shortener.py
backend/app/endpoints/: endpoints.py
backend/app/models/: url.py
backend/test/: conftest.py  test_shortener.py  test_shortener_api.py  test_utils.py
frontend/static/css/: styles.css
frontend/templates/: index.html
frontend/templates/errors/: 404.html  503.html
